# rag-api

./: .dockerignore  .env.example  .gitignore  ABOUT.ru.md  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements-docker.txt  requirements.txt
apps/agent/: README.md  __init__.py  agent.py  protocol.py  tools.py
apps/api/: auth.py  chat_client.py  config.py  db.py  embeddings_client.py  litellm_chat.py  lmstudio.py  logging_config.py  main.py  models.py  pgvector.py  retrieval.py
apps/api/scripts/: create_api_key.py
apps/ingest/: chunk_sanitize.py  chunking.py  cli.py  extract_output.py  pdf_extract.py  store.py  task_store.py
apps/rerank_host/: main.py
core/: __init__.py  config.py  db.py  db_models.py  lmstudio.py  model_preflight.py  pgvector.py  qdrant.py  schema.py  vector_search.py
core/chunking/: __init__.py  factory.py  protocol.py  recursive.py  semantic.py  sliding.py
core/reranking/: cohere.py  cross_encoder.py  factory.py  http.py  lmstudio.py  none.py  protocol.py
docs/: architecture-mermaid.md  architecture.md
infra/: README.md  compose.yml
scripts/: _lib.sh  create-api-key.sh  down.sh  health.sh  ingest.sh  logs-api.sh  logs-db.sh  pdf_to_md.sh  pdf_to_md_local.sh  psql.sh  rerank-host.sh  reset-db.sh  restart.sh  status.sh  up.sh
